--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4027,7 +4027,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bef7b3a4",
+   "id": "e6bf42ab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T13:35:12.059404Z",
@@ -4420,7 +4420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db21cf8",
+   "id": "983459bd",
    "metadata": {},
    "source": [
     "# kol -----------------"
@@ -4429,7 +4429,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a0de6857",
+   "id": "aefaff55",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T14:03:25.346707Z",
@@ -4606,7 +4606,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1b82c438",
+   "id": "933e5e86",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T14:03:41.654379Z",
@@ -5012,7 +5012,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "fca49753",
+   "id": "7b1c5dec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T14:04:47.624857Z",
@@ -5385,7 +5385,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "71ee42a6",
+   "id": "0d325038",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T13:52:56.238470Z",
@@ -5398,7 +5398,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7697c347",
+   "id": "b1fc9a02",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T13:53:04.012609Z",
@@ -5435,7 +5435,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c502c63d",
+   "id": "789752b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-11T13:53:11.186021Z",
@@ -5860,6 +5860,83 @@
    "source": [
     "kol"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d76ecb33",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T14:40:27.146449Z",
+     "start_time": "2025-05-11T14:39:56.547100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting redis\n",
+      "  Obtaining dependency information for redis from https://files.pythonhosted.org/packages/08/c8/68081c9d3531f7b2a4d663326b96a9dcbc2aef47df3c6b5c38dea90dff02/redis-6.0.0-py3-none-any.whl.metadata\n",
+      "  Downloading redis-6.0.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: async-timeout>=4.0.3 in c:\\users\\aril indra permana\\anaconda3\\lib\\site-packages (from redis) (4.0.3)\n",
+      "Downloading redis-6.0.0-py3-none-any.whl (268 kB)\n",
+      "   -------------------------------------- 268.9/268.9 kB 920.7 kB/s eta 0:00:00\n",
+      "Installing collected packages: redis\n",
+      "Successfully installed redis-6.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\aril indra permana\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -rpcio (c:\\users\\aril indra permana\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\aril indra permana\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -rpcio (c:\\users\\aril indra permana\\anaconda3\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m pip install redis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4a65b085",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-11T14:40:34.374168Z",
+     "start_time": "2025-05-11T14:40:33.748027Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'world'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import redis\n",
+    "\n",
+    "r = redis.Redis(host='localhost', port=6379, db=0)\n",
+    "\n",
+    "# Test\n",
+    "r.set('hello', 'world')\n",
+    "print(r.get('hello'))  # → b'world'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb8dd802",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
