--- a/KOL.ipynb
+++ b/KOL.ipynb
@@ -696,7 +696,7 @@
     "\n",
     "    try:\n",
     "        import json\n",
-    "        print(json.dumps(base_query, indent=2))\n",
+    "        #print(json.dumps(base_query, indent=2))\n",
     "        \n",
     "        # Execute aggregation query\n",
     "        response = es_conn.search(\n",
